force-app/main/default/objects/Cuentas__c/Cuentas__c.object-meta.xml
<CustomObject>
    <label>Cuenta</label>
    <nameField>
        <label>Descripción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuentas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>