force-app/main/default/objects/Cuentas__c/fields/Aporte_Dolares_Flag__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Dolares_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aporte Dolares Flag</label>
    <type>Checkbox</type>
</CustomField>