force-app/main/default/objects/Cuentas__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
                <label>Bac Honduras</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Banco Atlantida</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Banco Azteca</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Banco Banadesa</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Banco Banrural</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Banco Central de Honduras</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Banco Davivienda</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Banco de Honduras</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Banco de los Trabajadores</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Banco del País</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Banco de Occidente</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Banco Ficensa</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Banco Ficohsa</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Banco Hondureño del Café</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Banco Lafise</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Banco Promerica</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Bancovelo</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Credi Q</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>