force-app/main/default/objects/Cuentas__c/fields/Cargar_gastos_empleado__c.field-meta.xml
<CustomField>
    <fullName>Cargar_gastos_empleado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargar gastos de empleado</label>
    <type>Checkbox</type>
</CustomField>