force-app/main/default/objects/Cuentas__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <label>Causa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Afiliación por Solicitud</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Liquidado</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Fondo Pignorado por Préstamo</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Prospecto</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>No Aportante</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>No procede por decisión Admin</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Fondo Pignorado por Fianza</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Pensionado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>