force-app/main/default/objects/Cuentas__c/fields/Cobro_Individual_CRA__c.field-meta.xml
<CustomField>
    <fullName>Cobro_Individual_CRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobro Individual CRA?</label>
    <type>Checkbox</type>
</CustomField>