force-app/main/default/objects/Cuentas__c/fields/Codigo_Barra__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Barra__c</fullName>
    <label>Código de Barra</label>
    <length>50</length>
    <type>Text</type>
</CustomField>