force-app/main/default/objects/Cuentas__c/fields/Colectiva__c.field-meta.xml
<CustomField>
    <fullName>Colectiva__c</fullName>
    <formula>IF( Cliente__r.RecordType.DeveloperName = &apos;Juridico&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colectiva</label>
    <type>Checkbox</type>
</CustomField>