force-app/main/default/objects/Cuentas__c/fields/Comision_retiro_anticipado__c.field-meta.xml
<CustomField>
    <fullName>Comision_retiro_anticipado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comisión por retiro anticipado</label>
    <type>Checkbox</type>
</CustomField>