force-app/main/default/objects/Cuentas__c/fields/Cuenta_colectiva2__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_colectiva2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta colectiva</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cuentas__c.Colectiva__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cuentas__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>