force-app/main/default/objects/Cuentas__c/fields/De_01_anos__c.field-meta.xml
<CustomField>
    <fullName>De_01_anos__c</fullName>
    <label>De 0 - 1 años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>