force-app/main/default/objects/Cuentas__c/fields/De_12_anos__c.field-meta.xml
<CustomField>
    <fullName>De_12_anos__c</fullName>
    <label>De 1 - 2 años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>