force-app/main/default/objects/Cuentas__c/fields/Detalle_Cuenta_colectiva__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Cuenta_colectiva__c</fullName>
    <formula>Cuenta_colectiva2__r.Codigo__c + &apos; - &apos; + Cuenta_colectiva2__r.Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detalle de Cuenta colectiva</label>
    <type>Text</type>
</CustomField>