force-app/main/default/objects/Cuentas__c/fields/Detalle_Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Subproducto__c</fullName>
    <formula>Subproducto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detalle de Subproducto</label>
    <type>Text</type>
</CustomField>