force-app/main/default/objects/Cuentas__c/fields/Dia_aporte__c.field-meta.xml
<CustomField>
    <fullName>Dia_aporte__c</fullName>
    <label>Día de aporte</label>
    <length>2</length>
    <type>Text</type>
</CustomField>