force-app/main/default/objects/Cuentas__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>