force-app/main/default/objects/Cuentas__c/fields/Fecha_Apertura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Apertura__c</fullName>
    <label>Fecha de Apertura</label>
    <type>Date</type>
</CustomField>