force-app/main/default/objects/Cuentas__c/fields/Fecha_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aporte__c</fullName>
    <label>Fecha de Aporte</label>
    <type>Date</type>
</CustomField>