force-app/main/default/objects/Cuentas__c/fields/Fondo_Inversion__c.field-meta.xml
<CustomField>
    <fullName>Fondo_Inversion__c</fullName>
    <label>Fondo de Inversión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>101</fullName>
                <label>Mixto</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>Dólares</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>Lempiras Puros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>