force-app/main/default/objects/Cuentas__c/fields/FondoInversionCP__c.field-meta.xml
<CustomField>
    <fullName>FondoInversionCP__c</fullName>
    <formula>IF(
  ISPICKVAL(Fondo_Inversion__c, &quot;101&quot;),
  &quot;Lempiras Mixto (101)&quot;,
  IF(
    ISPICKVAL(Fondo_Inversion__c, &quot;113&quot;),
    &quot;Lempiras (113)&quot;,
    IF(
       ISPICKVAL(Fondo_Inversion__c, &quot;106&quot;), 
       &quot;Dólares (106)&quot;,
       &quot;&quot;
    )
  )       

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fondo Inversión CP</label>
    <type>Text</type>
</CustomField>