force-app/main/default/objects/Cuentas__c/fields/Matriz_Comision__c.field-meta.xml
<CustomField>
    <fullName>Matriz_Comision__c</fullName>
    <label>Matriz de Comisión</label>
    <length>50</length>
    <type>Text</type>
</CustomField>