force-app/main/default/objects/Cuentas__c/fields/Monto_aporte__c.field-meta.xml
<CustomField>
    <fullName>Monto_aporte__c</fullName>
    <label>Monto de aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>