force-app/main/default/objects/Cuentas__c/fields/Plazo_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Seguro__c</fullName>
    <label>Plazo Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>5 años</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>10 años</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No aplica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>