force-app/main/default/objects/Cuentas__c/fields/PSP_De_01_anos__c.field-meta.xml
<CustomField>
    <fullName>PSP_De_01_anos__c</fullName>
    <label>De 0 - 1 años</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>