force-app/main/default/objects/Cuentas__c/fields/PSP_Mas_De_20_anos__c.field-meta.xml
<CustomField>
    <fullName>PSP_Mas_De_20_anos__c</fullName>
    <label>Mas De 20 años</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>