force-app/main/default/objects/Cuentas__c/fields/Seguro_Vida__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Vida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seguro de Vida</label>
    <type>Checkbox</type>
</CustomField>