force-app/main/default/objects/Cuentas__c/fields/Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Subproducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subproducto</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Producto__c</field>
            <operation>equals</operation>
            <valueField>Subproducto__c.Producto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Subproducto__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>