force-app/main/default/objects/Cuentas__c/fields/Tipo_Comision__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Comision__c</fullName>
    <label>Tipo de Comisión</label>
    <length>50</length>
    <type>Text</type>
</CustomField>