force-app/main/default/objects/Cuentas__c/fields/Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cuenta bancaria</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cuenta de pensiones</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>