force-app/main/default/objects/Cuentas__c/fields/Tipo_Cuenta_bancaria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta_bancaria__c</fullName>
    <label>Tipo de Cuenta bancaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
                <label>Ahorro</label>
            </value>
            <value>
                <fullName>Checking</fullName>
                <label>Cheques</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>