force-app/main/default/objects/Cuentas__c/fields/Tipo_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Fondo__c</fullName>
    <label>Tipo de Fondo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Contributivo</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Contributivo</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cesantia</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>