force-app/main/default/objects/Cuentas__c/fields/Tipo_Politica_Retiro_Saldo_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Politica_Retiro_Saldo_Patronal__c</fullName>
    <label>Tipo de Politica Retiro Saldo Patronal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Antigüedad en la Empresa</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Antigüedad en el Fondo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>