force-app/main/default/objects/Cuentas__c/fields/Tipo_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Seguro__c</fullName>
    <label>Tipo Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Seguro con Prima Variable</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Seguro con Prima Definida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>