force-app/main/default/objects/Cuentas__c/validationRules/Validacion_de_Cobro.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_de_Cobro</fullName>
    <active>true</active>
    <errorConditionFormula>IF((Cobro_Individual_CRA__c &amp;&amp; Comision_retiro_anticipado__c ), true, false)</errorConditionFormula>
    <errorMessage>Esta seleccionando el cobro individual y el cobro por retiro anticipado, por favor solo seleccionar un</errorMessage>
</ValidationRule>