force-app/main/default/objects/Cuentas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Cliente__c</columns>
    <columns>Activo__c</columns>
    <columns>Subproducto__c</columns>
    <columns>Cuenta_colectiva2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>