force-app/main/default/objects/Cuentas__c/listViews/Cuentas_Juridicas.listView-meta.xml
<ListView>
    <fullName>Cuentas_Juridicas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Colectiva__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cuentas Juridicas</label>
</ListView>